--- a/sidenav.html
+++ b/sidenav.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hello Worldl! </h1>
-    <p> I want to eat Hamburger! </p>
-    <p>I want to drink soda</p>
+    <p> This is my sidenav! </p>
+    <p>Side nav paragrahp</p>
 </body>
 </html>
